--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "E-shop for electronic devices",
   "main": "server.js",
+  "type":"module",
   "scripts": {
     "start": "node backend/server",
-    "server":"nodemon backend/server",
-    "client":"npm start --prefix frontend",
-    "dev" : "concurrently \"npm run server\" \"npm run client\""
+    "server": "nodemon backend/server",
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   },
   "homepage": "https://github.com/bharathsurya021/ecommerceshop#readme",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1"
   },
   "devDependencies": {
